# WormChatGpt

./: .gitignore  DEPLOY.md  README.md  main.py  pyproject.toml  run.bat  setup.bat  vercel.json
api/: __init__.py  index.py
backend/: requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  chat.py  conversations.py  settings.py  users.py
backend/app/core/: __init__.py  config.py  logging.py  security.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/db/models/: __init__.py  conversation.py  message.py  settings.py  user.py
backend/app/modules/: __init__.py
backend/app/modules/adult_content/: __init__.py
backend/app/modules/crime_plans/: __init__.py
backend/app/modules/cyber_security/: __init__.py
backend/app/modules/non_tech_content/: __init__.py
backend/app/modules/software_tools/: __init__.py
backend/app/services/: __init__.py  chat_service.py
database/: init.sql
docker/: docker-compose.yml
